Fix post container overlapping with dropdown editing menu (#544)

--- a/app/assets/stylesheets/pages/profiles/profile_post.sass
+++ b/app/assets/stylesheets/pages/profiles/profile_post.sass
@@ -1,4 +1,3 @@
-// Recent Posts
 .recent_posts
   position: relative
   &.pending
@@ -11,8 +10,6 @@
       margin: 0 0 15px 274px
       height: 76px
       width: 76px
-
-  // Search Posts
   .show_results
     @include border-radius($border_radius)
     border: 1px solid #e6d996
@@ -26,7 +23,6 @@
       &:hover
         color: $color_pink
 
-  // No Posts
   .no_post_yet
     color: #e1e1e1
     font-size: 24px
@@ -39,17 +35,14 @@
     span
       display: block
       margin-top: 15px
-    // Mobile
     @media screen and (max-width: 767px)
       font-size: 14px
       margin-bottom: 80px
 
-  // Single Post
   .post
     margin-bottom: $box_margin
     padding-top: 15px
     position: relative
-    z-index: 1
     .edit_container
       @include border-radius(5px)
       background-color: #FFFFFF
@@ -186,8 +179,6 @@
             height: 134px !important
           img
             max-width: 282px
-
-    // Doc View
     .doc_list
       li
         .doc_view
@@ -236,8 +227,6 @@
             .doc_details
               span, .doc_title
                 color: #FFFFFF
-
-    // Message
     .message
       font-size: 13px
       line-height: 20px
@@ -246,8 +235,6 @@
       white-space: pre-wrap
       @media screen and (max-width: 767px)
         font-size: 12px
-
-    // Action Bar
     .action_bar
       @include white-area
       border-top: 1px solid $color_border
